Hydras can kill you